--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,41 @@
-set-option -g -q mouse on
-bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+##################################################
+#         Configuration copied from:             #
+# https://thevaluable.dev/tmux-config-mouseless/ #
+##################################################
+
+# Make commands start with Ctrl+Space instead of Ctrl+b
+unbind C-b
+set -g prefix C-Space
+
+# Remove annoying delay in vim when hitting ESC
 set -s escape-time 0
+
+# Enable 256 colors
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
+# Windows and panes are indexed from 1
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+# Enable mouse
+set-option -g -q mouse on
+bind-key -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+
+# Keybinding to reload tmux config
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+
+# Vim-like navigation
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# Vim-like window switching
+bind -n M-j previous-window
+bind -n M-k next-window
+
+# Vim-like copy mode
+set-window-option -g mode-keys vi
