--- a/alacritty/theme-mint.toml
+++ b/alacritty/theme-mint.toml
@@ -1,23 +1,25 @@
+# Colors from linux mint terminal theme
+
 [colors.bright]
-black      =  "0x55584d"
-blue       =  "0x719fd3"
-cyan       =  "0x35e2e0"
-green      =  "0x8ae32f"
-magenta    =  "0xaa80a6"
-red        =  "0xf02926"
-white      =  "0xeeeeee"
-yellow     =  "0xf9ea4f"
+black      =  "0x555753"
+blue       =  "0x729fcf"
+cyan       =  "0x34e2e2"
+green      =  "0x8ae234"
+magenta    =  "0xad7fa8"
+red        =  "0xef2929"
+white      =  "0xeeeeec"
+yellow     =  "0xfce94f"
 
 [colors.normal]
-black      =  "0x2f3438"
-blue       =  "0x3367a0"
-cyan       =  "0x099799"
-green      =  "0x4d9d00"
-magenta    =  "0x745277"
-red        =  "0xcf0000"
-white      =  "0xd2d7d0"
-yellow     =  "0xc69f02"
+black      =  "0x2e3436"
+blue       =  "0x3465a4"
+cyan       =  "0x06989a"
+green      =  "0x4e9a06"
+magenta    =  "0x75507b"
+red        =  "0xcc0000"
+white      =  "0xd3d7cf"
+yellow     =  "0xc4a000"
 
 [colors.primary]
 background =  "0x1f1f1f"
-foreground =  "0xd2d7d0"
+foreground =  "0xffffff"
