--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,8 +11,9 @@ set -g prefix C-Space
 set -s escape-time 0
 
 # Enable 256 colors
-set -g default-terminal "tmux-256color"
+set -g default-terminal    "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+set -as terminal-features  ",alacritty*:RGB"
 
 # Windows and panes are indexed from 1
 set -g base-index 1
