Alacritty: hide mouse when typing

--- a/alacritty/1/alacritty.toml
+++ b/alacritty/1/alacritty.toml
@@ -1,6 +1,7 @@
 import = ["~/.config/alacritty/theme-mint.toml",
           "~/.config/alacritty/font-liberation.toml",
-          "~/.config/alacritty/window.toml"]
+          "~/.config/alacritty/window.toml",
+          "~/.config/alacritty/mouse.toml"]
 
 live_config_reload = false
 
