Tmux: make panes use the same folder as window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,3 +40,8 @@ bind -n M-k next-window
 
 # Vim-like copy mode
 set-window-option -g mode-keys vi
+
+# Create panes in same directory
+bind '"' split-window    -c "#{pane_current_path}"
+bind  %  split-window -h -c "#{pane_current_path}"
+bind  k  new-window      -c "#{pane_current_path}"
