Alacritty: add my colorscheme

--- a/alacritty/theme-darktooth.toml
+++ b/alacritty/theme-darktooth.toml
@@ -1,23 +1,23 @@
 [colors.bright]
-black      =  "0x69605f"
-blue       =  "0x89ad9f"
-cyan       =  "0x41deec"
-green      =  "0xc0c328"
-magenta    =  "0xdb8ba1"
-red        =  "0xfd513c"
-white      =  "0xffffce"
-yellow     =  "0xfcc138"
+black      =  "#69605f"
+blue       =  "#89ad9f"
+cyan       =  "#41deec"
+green      =  "#c0c328"
+magenta    =  "#db8ba1"
+red        =  "#fd513c"
+white      =  "#ffffce"
+yellow     =  "#fcc138"
 
 [colors.normal]
-black      =  "0x2a2a2a"
-blue       =  "0x076c7f"
-cyan       =  "0x00adb6"
-green      =  "0x7d780e"
-magenta    =  "0x964277"
-red        =  "0xe4412f"
-white      =  "0xfef6c8"
-yellow     =  "0xbd7b15"
+black      =  "#2a2a2a"
+blue       =  "#076c7f"
+cyan       =  "#00adb6"
+green      =  "#7d780e"
+magenta    =  "#964277"
+red        =  "#e4412f"
+white      =  "#fef6c8"
+yellow     =  "#bd7b15"
 
 [colors.primary]
-background =  "0x2a2a2a"
-foreground =  "0xfef6cb"
+background =  "#2a2a2a"
+foreground =  "#fef6cb"
