--- a/alacritty/theme-mint.toml
+++ b/alacritty/theme-mint.toml
@@ -1,25 +1,25 @@
 # Colors from linux mint terminal theme
 
 [colors.bright]
-black      =  "0x555753"
-blue       =  "0x729fcf"
-cyan       =  "0x34e2e2"
-green      =  "0x8ae234"
-magenta    =  "0xad7fa8"
-red        =  "0xef2929"
-white      =  "0xeeeeec"
-yellow     =  "0xfce94f"
+black      =  "#555753"
+blue       =  "#729fcf"
+cyan       =  "#34e2e2"
+green      =  "#8ae234"
+magenta    =  "#ad7fa8"
+red        =  "#ef2929"
+white      =  "#eeeeec"
+yellow     =  "#fce94f"
 
 [colors.normal]
-black      =  "0x2e3436"
-blue       =  "0x3465a4"
-cyan       =  "0x06989a"
-green      =  "0x4e9a06"
-magenta    =  "0x75507b"
-red        =  "0xcc0000"
-white      =  "0xd3d7cf"
-yellow     =  "0xc4a000"
+black      =  "#2e3436"
+blue       =  "#3465a4"
+cyan       =  "#06989a"
+green      =  "#4e9a06"
+magenta    =  "#75507b"
+red        =  "#cc0000"
+white      =  "#d3d7cf"
+yellow     =  "#c4a000"
 
 [colors.primary]
-background =  "0x1f1f1f"
-foreground =  "0xffffff"
+background =  "#3f3f3f"
+foreground =  "#ffffff"
