Tmux: change the bottom bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,3 +45,22 @@ set-window-option -g mode-keys vi
 bind '"' split-window    -c "#{pane_current_path}"
 bind  %  split-window -h -c "#{pane_current_path}"
 bind  k  new-window      -c "#{pane_current_path}"
+
+#### STATUS LINE #####
+set -g status on
+set -g status-interval 1    # Update every second
+set -g status-justify centre
+set -g status-style fg=white,bg=black
+
+# Highlight the current window.
+setw -g window-status-current-style fg=white,bg=green,bright
+
+# LEFT STATUS (git info)
+set -g status-left-length 100
+set -g status-left-style fg=cyan,bright
+set -g status-left '  #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD): #(cd #{pane_current_path}; git rev-parse --short HEAD)'
+
+# RIGHT STATUS (date)
+set -g status-right-length 100
+set -g status-right-style fg=blue,bright
+set -g status-right '#(date) '
