Tmux: add "new session" and "kill session" binds

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,6 +28,10 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 
+# Sessions
+bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
+bind K confirm kill-session
+
 # Vim-like navigation
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
