Alacritty: update configs (use general section)

--- a/alacritty/1/alacritty.toml
+++ b/alacritty/1/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 import = ["~/.config/alacritty/theme-darktooth.toml",
           "~/.config/alacritty/font-liberation.toml",
           "~/.config/alacritty/window.toml",
