--- a/alacritty/2/alacritty.toml
+++ b/alacritty/2/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 import = ["~/.config/alacritty/theme-mine.toml",
           "~/.config/alacritty/font-jetbrains.toml",
           "~/.config/alacritty/window.toml",
