--- a/alacritty/theme-mint.toml
+++ b/alacritty/theme-mint.toml
@@ -21,5 +21,5 @@ white      =  "#d3d7cf"
 yellow     =  "#c4a000"
 
 [colors.primary]
-background =  "#3f3f3f"
+background =  "#2b2b2b"
 foreground =  "#ffffff"
