hyprland: add super W keybinding

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -258,6 +258,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, R, exec, $menu -show run
+bind = $mainMod, W, exec, $menu -show window
 bind = $mainMod Shift, L, exec, hyprlock
 
 # TODO: Learn what those do and how they work
